src/objects/Document_Type_Flow__mdt.object
<CustomObject>
    <description>to have configuration for combination of document type and flow, delivery address control e.g.</description>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <referenceTo>Document_Type__mdt</referenceTo>
        <relationshipLabel>Document Type Flows</relationshipLabel>
        <relationshipName>Document_Type_Flows</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                    <label>Member</label>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to indicate if the flow is group in focus</description>
        <label>Is Group Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Member_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to indicate if the flow is member in focus</description>
        <label>Is Member Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscriber_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Sending only to Subscriber Address</description>
        <label>Subscriber Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WS_Backup_Address_Type__c</fullName>
        <label>WS Backup Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Primary_Address_Type__c</fullName>
        <description>primary address type from service response</description>
        <label>WS Primary Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAlternateAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Alternate Address</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Type Flow</label>
    <pluralLabel>Document Type Flows</pluralLabel>
</CustomObject>